Se agrega el Proyecto

--- a/MiWeb.html
+++ b/MiWeb.html
@@ -17,7 +17,7 @@
         <p id="text"><small>HI, I’M</small><br>
             Daniel Olivares <br>
 
-            <a aria-label='Thanks' class='h-button centered' data-text='Press here to start' href='indexportafolio.html'>
+            <a aria-label='Thanks' class='h-button centered' data-text='Press here to start' href='index.html'>
                 <span>T</span>
                 <span>h</span>
                 <span>a</span>
