Se mejora el codigo

--- a/MiWeb.html
+++ b/MiWeb.html
@@ -167,27 +167,27 @@
         <div class="box">
           <span></span>
           <div id="content">
-            <h2>Web 1</h2>
+            <h2>Pika</h2>
 
-            <a href="indexpika.html" download="" class="btn">Entrar</a>
+            <a href="indexpika.html" target="_blank" class="btn">Entrar</a>
           </div>
         </div>
 
         <div class="box">
           <span></span>
           <div id="content">
-            <h2>Web 2</h2>
+            <h2>SEO Dream</h2>
 
-            <a href="DANIELOLIVARESSEO.html" download="" class="btn">Entrar</a>
+            <a href="DANIELOLIVARESSEO.html" target="_blank" class="btn">Entrar</a>
           </div>
         </div>
 
         <div class="box">
           <span></span>
           <div id="content">
-            <h2>Web 3</h2>
+            <h2>METRIC</h2>
 
-            <a href="indexMETRIC.html" download="" class="btn">Entrar</a>
+            <a href="indexMETRIC.html" target="_blank" class="btn">Entrar</a>
           </div>
         </div>
 
